# cybernetic-ide

./: .gitignore  Cargo.toml  README.md  cyber-robotics-mcp  todo.md
.github/workflows/: package_apps.yml
.zed/: debug.json  tasks.json
assets/settings/: default.json
crates/agent_skills/: agent_skills.rs
crates/cyber_robot_viewer/: Cargo.toml  README.md
crates/cyber_robot_viewer/src/: cyber_robot_viewer.rs
crates/zed/: Cargo.toml
docs/research/: g1-yoga-policy-handoff-prompt.md  g1-yoga-policy-session-log.md  g1-yoga-policy-training.md  robot-policies-00-syllabus.md  robot-policies-01-fundamentals.md  robot-policies-02-training-paradigms.md  robot-policies-03-locomotion.md  robot-policies-04-manipulation-rigid.md  robot-policies-05-deformable-soft-body.md  robot-policies-06-frontiers.md  robot-policies-07-case-study-loco-mujoco.md
docs/src/: SUMMARY.md  (+3 more)
examples/: control_g1_sim.py  easy_g1_playground.py  g1_agent_debug_loop.py  g1_agv_sdk.py  g1_arm_sdk_dds.py  g1_behavior_gallery.py  g1_dex3_sdk.py  g1_hand_sdk.py  g1_joint_targets.py  g1_loco_sdk.py  g1_lowcmd_sdk.py  g1_lowstate_monitor.py  g1_official_lowcmd_stream.py  g1_official_managed_session.py  g1_official_raise_hand.py  g1_raise_hand_sdk.py  g1_safety_stop.py  g1_scene_obstacle.py  g1_user_lowcmd_sdk.py  g1_walk_square_loco.py  g1_wave_hand_sdk.py  g1_wireless_controller_sdk.py  use_cybernetic_robotics_lib.py  yoga_teacher.py
script/: bundle-windows.ps1  cyber-robotics-mcp.mjs  prepare-unitree-g1-mujoco-container.mjs  prepare-unitree-g1-sdk2-sidecar.mjs  probe-unitree-g1-mujoco-protocol.mjs
(+39 files in other folders)
